--- a/client/android/app/src/main/res/values/strings.xml
+++ b/client/android/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Bubbles</string>
     <string name="default_server_endpoint">viphost.asuscomm.com:36444</string>
     <string name="test_room">test</string>
-    <string name="secure_connection">Secure connection</string>
+    <string name="secure_connection">Secure</string>
+    <string name="compress_connection">Compress</string>
     <string name="auto_pilot">Auto pilot</string>
     <string name="button_start">Start</string>
 </resources>
