--- a/client/android/bubbles/app/src/main/res/values/strings.xml
+++ b/client/android/bubbles/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Bubbles</string>
-    <string name="default_server_endpoint">viphost.asuscomm.com:36444</string>
+    <string name="default_server_endpoint">viphost.go.ro:36444</string>
     <string name="test_room">test</string>
     <string name="secure_connection">Secure</string>
     <string name="compress_connection">Compress</string>
